--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,6 +27,8 @@ website:
         - groupassignment1.qmd
         - groupassignment2.qmd
         - groupassignment3.qmd
+        - essay1.qmd
+        - groupassignment4.qmd
 
 format:
   html:
